# windscope_scanner

./: .gitignore
CS_CityScoPy-3.2/: README.md  calibrate.py  cityscopy.py  copyright.py  pyproject.toml  run.py
CS_CityScoPy-3.2/settings/: cityscopy.json
