[project]
name = "cityscopy"
version = "0.1.0"
license = "GPL-3.0-only"
description = ""
authors = [
    {name = "Ariel Noyman"},
    {name = "dokxid",email = "dan-du@live.de"}
]
readme = "README.md"
requires-python = "^3.13"
dependencies = [
    "requests (>=2.34.2,<3.0.0)",
    "opencv-python (>=4.13.0.92,<5.0.0.0)",
    "numpy (>=1.24.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
